--- a/src/components/layout/nav.styles.scss
+++ b/src/components/layout/nav.styles.scss
@@ -1,11 +1,11 @@
 
-ul {
+.nav-links {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-li {
+.nav-link {
     list-style: none;
     font-size: 1rem;
     padding: 0.5rem;
