--- a/src/pages/frontpage.style.scss
+++ b/src/pages/frontpage.style.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 1rem;
 
 }
 
@@ -11,8 +12,9 @@
     align-items: center;
     font-size: calc(10px + 2vmin);
     margin: 0 0 1rem 0;
-    width: 100%;
-    background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(100,130,159,1) 0%, rgba(103,56,96,1) 90% );
+    width: 50rem;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.26);
+    background-image: linear-gradient( 178.6deg,  rgb(34, 44, 53) 11.8%, rgb(145, 161, 175) 83.8% );
 
     & .paragraph {
         max-width: 25rem;
