Added ProjectList component and moved images to their own list elements. Added Todo and Calculator components. Changed the name of Project.component.jsx to Project.jsx. Added MiniProject.jsx component. Also made the code more readable.

--- a/src/components/projects/project.styles.scss
+++ b/src/components/projects/project.styles.scss
@@ -1,28 +1,9 @@
 .project-images {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    width: 100%;
-    margin: 2rem 0 2rem 0;
-    background-image: linear-gradient(white, black);
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0 2rem 0;
+  width: 60rem;
+  background-image: linear-gradient(rgb(197, 188, 188), rgb(201, 194, 207));
 
-    
 
-    & :nth-child(1) {
-        display: flex;
-
-    }
-
-    & :nth-child(2) {
-        display: flex;
-
-    }
-
-    & :nth-child(3) {
-        display: flex;
-
-    }
 }
-
-
-
